# Group-A7-Project

./: .dockerignore  .gitignore  Dockerfile  PIPELINE_OPTIMIZATION.md  README.md  entrypoint.sh  fix_notebook.py  fix_spark_save.py  fix_spark_save2.py  full_logs.txt  full_logs_utf8.txt  inspect.json  job.yaml  job.yaml.utf8  justfile  minikube_err.txt  minikube_err_utf8.txt  output.txt  pyproject.toml  requirements.txt  run_dask.ps1  run_dask.sh  run_spark.ps1  run_spark.sh  start_minikube.ps1  start_minikube.sh  start_minikube_dask.ps1  start_minikube_dask.sh  start_minikube_spark.ps1  start_minikube_spark.sh
.venv_backup/: pyvenv.cfg
data/: README.md
docs/: data.md  development.md
k8s/: dask-scheduler.yaml  dask-worker.yaml  pipeline-job-dask.yaml  pipeline-job-spark.yaml  pipeline-job.yaml  spark-job.yaml  spark-master.yaml  spark-role.yaml  spark-worker.yaml
notebooks/: pipeline.ipynb
pipeline/: run_pipeline.py  run_pipeline_dask.py  run_pipeline_spark.py  run_spark_pipeline.py
scripts/: check_schema.py  download_data.py  run_dask.sh  run_spark.ps1  run_spark.sh  save_figures.py  start_minikube.ps1  start_minikube.sh
src/: config.py  ingestion.py  logger.py  storage.py  transformations_dask.py  transformations_spark.py  validation.py
src/group_a7_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
