[project]
name = "group-a7-project"
version = "0.1.0"
description = "E-commerce behavior data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.9.0",
    "dask[dataframe,distributed]==2026.1.2",
    "fastparquet>=2023.1.0",
    "fsspec>=2023.1.0",
    "httpx>=0.28.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "pyspark>=3.4.0",
    "tqdm>=4.67.1",
]

[tool.uv]
managed = true
package = false
