[project]
name = "group-a7-project"
version = "0.1.0"
description = "E-commerce behavior data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh==3.9.0",
    "dask[dataframe,distributed]==2026.1.2",
    "fastparquet==2025.12.0",
    "fsspec==2026.2.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "pyspark==3.5.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "tqdm>=4.67.1",
]

[tool.uv]
managed = true
package = false
